# Longing-for-Heaven

./: docker-compose.yml  some.css  some.html
backend/: .gitignore  Dockerfile.backend  README.md  pyproject.toml  test.py
backend/app/: backend_admin_preload.py  main.py  models.py  schemas.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 061eed8a8a3f_back.py  277215fb8caf_add_order_table.py  2ecd3c1c314e_add_order_number.py  3b3c4ffb768e_.py  53982618bcda_change_cart_item_columns.py  5931b590edf3_first_revision_adding_4_table.py  a21afea5be4a_add_product_size_size_and_change_order_.py  b468cf1fb756_add_order_and_orderitem_cart_cartitem_.py  b54fde6b2e26_adjusted_cartitem_and_size.py  dfd0a0142287_adjust_order_and_order_items.py  f4e7487d46e3_first_revision_adding_4_table.py
backend/app/api/: deps.py  main.py
backend/app/api/routers/admin/: admins.py  login.py
backend/app/api/routers/cart/: carts.py  items.py
backend/app/api/routers/np/: nova_poshta.py
backend/app/api/routers/order/: items.py  orders.py
backend/app/api/routers/product/: images.py  products.py  sizes.py
backend/app/api/routers/size/: sizes.py
backend/app/api/routers/user/: login.py  users.py
backend/app/core/: config.py  database.py  redis.py  security.py
backend/app/services/: admin.py  productimage.py  size.py  user.py
backend/app/services/cart/: cart.py  item.py
backend/app/services/order/: item.py  order.py
backend/app/services/product/: image.py  product.py  size.py
backend/app/utils/: utils.py
backend/tests/: conftest.py
backend/tests/fixtures/: product_fixtures.py
backend/tests/routers/products/: products_test.py
backend/tests/routers/users/: users_test.py
frontend/: Dockerfile.frontend
frontend/app/: index.html  package-lock.json  package.json
frontend/app/src/: App.tsx  api.ts  main.tsx  store.ts  tailwind.config.ts
frontend/app/src/components/: Checkout.tsx  Contacts.tsx  CropImage.tsx  Footer.tsx  Header.tsx  LoginForm.tsx  Main.tsx  Product.tsx  ProductCard.tsx  ProductForm.tsx  ProductImageForm.tsx  Products.tsx  RegistrationForm.tsx  ShippingAndPayment.tsx  SideCart.tsx  UserOrders.tsx  (+4 more)
(+31 files in other folders)
