[project]
name = "backend"
version = "0.1.0"
description = "Backend for web store \"Longing for heaven\", arhitecture: Python, FastAPI, SQLAlchemy, PostgreSQL, Pydantic, Alembic, Git and other."
authors = [
    {name = "SmokingA1"}
]
license = {text = "GPL-3.0-or-later"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.3,<0.35.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "alembic (>=1.16.1,<2.0.0)",
    "pydantic[email] (>=2.11.5,<3.0.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "redis (>=6.2.0,<7.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "emails (>=0.6,<0.7)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pytest (>=8.4.1,<9.0.0)",
    "anyio (>=4.9.0,<5.0.0)",
    "pytest-asyncio (>=1.1.0,<2.0.0)",
    "asgi-lifespan (>=2.1.0,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
